Leran html in depth and make projects with html_basics

--- a/root/index.html
+++ b/root/index.html
@@ -4,7 +4,7 @@
 <head>              <!-- parent of meta data tags -->
 
     <title>Document</title>
-    
+
 </head>
 
 <body> 
@@ -18,6 +18,79 @@
     <h7> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h7>
     <h8> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h8>
     <h9> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h9>
+
+    <hr>
+
+
+
+    <div id="header"> 
+
+        <p> This is me </p>
+        
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum fugit inventore, laboriosam, quibusdam consectetur voluptates quos porro vel non, officiis architecto suscipit veniam eligendi molestias sapiente officia enim. Tempore, in!</p> 
+
+
+
+    <center>
+
+        <img src="/images/striver.jpg" alt="strivers photo" height="250px">
+
+        <video src="/assets/striver.mp4" alt="strivers video" height="250px" controls autoplay muted></video> <br> <hr>
+
+        <a href="https://leetcode.com/Akashmishra0601/">leetcode</a> <br>
+        <a href="https://leetcode.com/Akashmishra0601/" target="_blank">leetcode</a>
+    </center>
+
+
+
+    <b>bold</b>
+
+    <i>italic</i>
+
+    <u>Underline</u>
+
+    <s>waste</s>
+
+
+    <pre>
+        SONG LYRICS
+Twinkle twinkle little star.
+How I wonder what you are.
+Up above the world so high.
+Like a diamond in the sky.
+Twinkle twinkle little star.
+How I wonder what you are.
+
+Twinkle twinkle little star.
+How I wonder what you are.
+Up above the world so high.
+Like a diamond in the sky.
+Twinkle twinkle little star.
+How I wonder what you are.
+    </pre>
+
+
+    <big>This is big</big>
+    <small>this is small</small>
+
+    <p>(a + b) <sup>2</sup> </p>
+
+    CH <sub>4</sub>
+
+
+
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore vero eveniet voluptatum qui quisquam obcaecati at ratione est impedit odit rem, cum libero doloremque nihil? Id nihil nostrum reprehenderit nam!
+
+    </p>
+
+    <aside> Lorem ipsum dolor sit amet.</aside>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+
+
+
+    </div>
 
 </body>
 </html>
