--- a/root/index.html
+++ b/root/index.html
@@ -238,6 +238,7 @@
             <tr>
                 <td>holder</td>
                 <td>Bulb</td>
+                <td> done </td>
                 <td>light</td>
             </tr>
         </table>
