--- a/root/index.html
+++ b/root/index.html
@@ -11,9 +11,7 @@
 
         <h1> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h1>
         <h2> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h2>
-        <h3> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h3>
-        <h4> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h4>
-        <h5> Hello Jii! Hello Jii! This is your Instructor " Akash Mihra " </h5>
+
 
         <p> This is me </p>
         <p> 
@@ -133,49 +131,62 @@
     <section>
         <form action="/contact.php" method="post">
 
-            <label for="UserName">UserName</label>
+            <label for="UserName">UserName:</label>
             <input type="text" placeholder="Enter your Name" required id="UserName"> <br> <br>
 
-            <label for="passwords">UserName</label>
+            <label for="passwords">UserName:</label>
             <input type="Password" placeholder="Enter yor passwrod" id="passwords ">
             <br> <br>
 
-            <input type="button">
             <input type="button" value="Submit">
+            <input type="submit" name="" id="">
+            <button >hello</button>             <br> <br>
+
 
                 
-        date: <input type="date" name="date" id=""><br>
+        date: <input type="date" name="date" id=""><br>             <br> <br>
 
-        file_cchoose : <input type="file" name="" id=""> <br>
 
-        colour: <input type="color" name="" id=""><br>
+        file_cchoose : <input type="file" name="" id=""> <br>             <br> <br>
 
-        price range: <input type="range" name="" id="">
 
-        <button>user name</button>
-        <input type="submit" name="" id="">
+        colour: <input type="color" name="" id=""><br>             <br> <br>
+
+
+        price range: <input type="range" name="" id="">             <br> <br>
+
+
+        <button>user name</button> 
+        <input type="submit" name="" id="">             <br> <br> <hr>
+
 
         <label for="hello">Male</label>
         <input type="radio" name="male" id="hello" value = "Male"><br>
 
         <label for="hello">Female</label>
-        <input type="radio" name="male" id="hello" value = "female"><br>
+        <input type="radio" name="Female" id="hello" value = "female"><br>
 
         <label for="hello">other</label>
-        <input type="radio" name="male" id="hello" value = "other">
+        <input type="radio" name="other" id="hello" value = "other"> <br>
 
-        <input type="checkbox" name="languages" id="" value="c">
-        <input type="checkbox" name="languages" id="" value="java">
-        <input type="checkbox" name="languages" id="" value="c++">
+        <label for="no">c</label>
+        <input type="checkbox" name="languages" id="no" value="c">
 
-        <input type="search" name="" id="">
+        <label for="no">c++</label>
+        <input type="checkbox" name="languages" id="no" value="java">
+
+        <label for="no">java</label>
+        <input type="checkbox" name="languages" id="no" value="c++"> 
+        <br>
+
+        <input type="search" name="" id=""> <br>
 
         <select name="country" id="">
             <option value="India">India</option><br>
             <option value="Uk">Uk</option><br>
             <option value="Russia">Russia</option><br>
             <option value="China">China</option><br>
-        </select>
+        </select> <br>  <br> <hr>
 
 
         <textarea name="input" id="hello" cols="30" rows="10" >enter your throuhg</textarea><br>
